made image rectangle to fix cropping issue

--- a/style.css
+++ b/style.css
@@ -66,6 +66,6 @@ p {
 }
 
 #planetImageContainer img {
+    width: auto;
     height: 50px; /* Adjust the height as needed */
-    border-radius: 50%; /* Make the image circular */
 }
